--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
             <version>23.0.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-base</artifactId>
+            <version>23.0.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <!-- ================= BUILD ================= -->
